tests/machine/x/cobol/pure_global_fold.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:9: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob: in paragraph 'INC':
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:14: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:15: error: 'X' cannot be used here

